--- a/charts/eng110-nodeapp/values.yaml
+++ b/charts/eng110-nodeapp/values.yaml
@@ -28,3 +28,31 @@ db_container_port: 27017
 
 db_mongo_service_mame: eng110-service-mongo
 db_ports: 27017
+
+# for ingress.yaml (which is disabled at present)
+
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+  #  - secretName: chart-example-tls
+  #    hosts:
+  #      - chart-example.local
+
+
+# for hpa.yaml (but autoscaling is also currently disabled)
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
