--- a/charts/eng110-nodeapp/templates/service.yaml
+++ b/charts/eng110-nodeapp/templates/service.yaml
@@ -1,25 +1,30 @@
----
-#Service for App
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.app_service_name }}
+  name: sam-service-mongo
 spec:
   selector:
-    app: {{ .Values.app_selector }}
+    app: mongo
   ports:
-    - port: {{ .Values.app_service_port }}
-      targetPort: {{ .Values.app_target_port }}
-      nodePort: {{ .Values.app_nodeport }}
-  type: LoadBalancer
+    - port: 27017
+      targetPort: 27017
 ---
-apiVersion: v1
-kind: Service
+# Mongo Deployment
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: {{ .Values.db_mongo_service_mame }}
+  name: sam-mongo
 spec:
   selector:
-    app: {{ .Values.db_selector }}
-  ports:
-    - port: {{ .Values.db_ports }}
-      targetPort: {{ .Values.db_ports }}
+    matchLabels:
+      app: mongo
+  template:
+    metadata:
+      labels:
+        app: mongo
+    spec:
+      containers:
+        - name: mongo
+          image: mongo
+          ports:
+            - containerPort: 27017
